# networkz

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: coverage.yml  example.yml  example.yml.OLD  mypy.yml  test.yml
comparisons/: spreading_minbudget_preprocessed.csv
experiments/: spreading_minbudget.csv
experiments/firefighter_problem/: comparisons.py  non_spreading.csv  non_spreading_minbudget.csv  non_spreading_minbudget_preprocessed.csv  spreading_maxsave.csv  spreading_maxsave_preprocessed.csv  spreading_minbudget.csv  spreading_minbudget_preprocessed.csv
experiments/minimal_fraction_max_matching/: main.py
experiments/minimal_fraction_max_matching/algorithms/: cpp_matching  fractional_matching.py  minimal_fraction_max_matching.cpp  tests.cpp
experiments/minimal_fraction_max_matching/experiments/: benchmark.py  plot_results.py
experiments/minimal_fraction_max_matching/output/: benchmarks.csv
networky/: __init__.py
networky/algorithms/: __init__.py
networky/algorithms/approximation/: __init__.py
networky/algorithms/approximation/tests/: test_coalition_formation.py
networky/algorithms/bipartite/: __init__.py  _init__.py  rank_maximal_matching.py
networky/algorithms/bipartite/tests/: test_rank_maximal_matching.py
networky/linlag/: __init__.py
networky/tests/: test_example.py
networkz/: __init__.py  conftest.py
networkz/algorithms/: __init__.py  contiguous_labeling.py  matching.py  max_flow_with_node_capacity.py  max_weight_fractional_matching.py  minimal_fraction_max_matching.py
networkz/algorithms/approximation/: __init__.py
networkz/algorithms/approximation/firefighter_problem/: Firefighter_Problem.py  Random_Graph_Generator.py  Utils.py  __init__.py  graph_flow_reduction.py  graphs.json  main.py  max_flow_with_node_capacity.py  test.py
networkz/algorithms/approximation/tests/: test_coalition_formation.py
networkz/algorithms/approximation/tests/test_firefighter_problem/: __init__.py  graphs.json  test_heuristic_maxsave.py  test_heuristic_minbudget.py  test_non_spreading_dirlaynet_minbudget.py  test_non_spreading_minbudget.py  test_parsing.py  test_spreading_maxsave.py  test_spreading_minbudget.py  test_utils.py
networkz/algorithms/approximation/tests/test_firefighter_problem/comparisons/: comparisons.py  non_spreading.csv  non_spreading_preprocessed.csv  spreading.csv  spreading_maxsave.csv  spreading_maxsave_cleaned.csv  spreading_maxsave_preprocessed.csv  spreading_minbudget.csv  spreading_minbudget_preprocessed.csv
networkz/algorithms/bipartite/: rank_maximal_matching.py
networkz/algorithms/bipartite/tests/: test_rank_maximal_matching.py
networkz/algorithms/tests/: test_contiguous_labeling.py  test_fractional_matching.py  test_max_weight_fractional_matching.py  test_minimal_fraction_max_matching.py.py
networkz/algorithms/tests/test_firefighter_problem/: test_heuristic_maxsave.py  test_heuristic_minbudget.py  test_non_spreading_dirlaynet_minbudget.py  test_non_spreading_minbudget.py  test_parsing.py  test_spreading_maxsave.py  test_spreading_minbudget.py  test_utils.py
networkz/algorithms/tests/test_firefighter_problem/comparisons/: test_heuristic_minbudget_comparison.txt  test_heuristic_minbudget_comparison_20240625_203255.txt
requirements/: default.txt  developer.txt  extra.txt  test.txt
scripts/: update_nx.py
